# ecdsa-circuit-input-lib

./: .gitignore  Cargo.toml  README.md  keys.db
circuits/secp256k1/src/: main.nr
src/: db.rs  lib.rs
src/core/: signatures.rs
src/keys/: ecdsa.rs
