[package]
name = "ecdsa-circuit-input-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# crypto
k256 = "0.13.2"
rand_core = "0.6.4"
sha2 = "0.10.8"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

# storage
rusqlite = "0.29.0"